@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-25T08:25:32Z",
+  "timestamp" : "2022-08-25T16:25:53Z",
   "count_outdated" : 2366,
   "uniques_outdated" : 556,
-  "count" : 2387,
+  "count" : 2388,
   "uniques" : 571,
   "clones" : [
     {
@@ -56,8 +56,8 @@
     },
     {
       "timestamp": "2022-08-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
