@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 10,
   "clones": [
     {
@@ -39,7 +39,7 @@
     },
     {
       "timestamp": "2022-08-25T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
