@@ -1,3 +1,10 @@
+2022-08-25T16:25:53Z:
+* notice: last 14d: unq all: 10 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 556 2366 / 571 2387
+* notice: next accum: outdated-unq outdated-all / unq all: 556 2366 / 571 2388
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-08-25]
+
 2022-08-25T08:25:32Z:
 * notice: last 14d: unq all: 10 21
 * notice: prev accum: outdated-unq outdated-all / unq all: 556 2366 / 570 2386
